...
    <string name="last_measurements">Предыдущее значение на %s</string>
    <string name="new_measurements">Текущее значение на %s</string>
    <string name="date_format">dd.MM.yyyy</string>
    <string name="progress">Прогресс</string>
    <string name="weight_change">Изменение веса, кг</string>
    <string name="total_for_day">Всего за день</string>
    <string name="of_n_grams">из %d г</string>
    <string name="of_n_calories">из %d ккал</string>
    <string name="period">Период</string>
    <string name="grams_abbrv">г</string>

    <string name="user_measurements_period_array_all_time">За всё время</string>
    <string name="user_measurements_period_array_year">За год</string>
    <string name="user_measurements_period_array_6_months">За пол года</string>
    <string name="user_measurements_period_array_month">За месяц</string>

    <string name="return_today">Сегодня</string>
    <string name="today">Сегодня</string>
    <string name="tomorrow">Завтра</string>
    <string name="day_after_tomorrow">Послезавтра</string>
    <string name="yesterday">Вчера</string>
    <string name="day_before_yesterday">Позавчера</string>
    <string name="n_calories">%sккал</string>
    <string name="n_gramms">%dг</string>

    <string name="privacy_policy">Политика\nконфиденциальности</string>
    <string name="privacy_policy_address">https://docs.google.com/document/d/1H2mWhrd1rBVvFluqyf6SI2zsWqFnXbMrnnHas_zf9z0</string>

...
