...
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="15dp"
            android:layout_marginTop="20dp"
            android:maxLines="3"
            android:scrollbars="vertical"
            app:layout_constraintEnd_toStartOf="@+id/frame_layout_button_delete"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:text="Чечевица" />

        <FrameLayout
            android:id="@+id/frame_layout_button_delete"
...
            android:layout_marginEnd="15dp"
            app:layout_constraintTop_toBottomOf="@id/nutrition_progress_with_values_parent"
            app:layout_constraintStart_toStartOf="parent"
            android:text="@string/weight_in_card" />

        <korablique.recipecalculator.ui.calckeyboard.CalcEditText
            android:id="@+id/weight_edit_text"
            style="@style/RobotoMonoText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="11.5dp"
            android:layout_marginEnd="11.5dp"
            app:layout_constraintTop_toBottomOf="@id/row_fake_top"
...
            style="@style/VioletLiningButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@+id/weight_edit_text"
            app:layout_constraintBottom_toBottomOf="@id/constraint_layout"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/button1"
            android:text="@string/add_foodstuff"
            android:layout_marginTop="8dp"
            android:layout_marginStart="15dp"
            android:layout_marginEnd="7dp"
            android:layout_marginBottom="15dp"
            android:visibility="gone"
...
