<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:id="@+id/activity_settings_layout">
    <include
        android:id="@+id/title_layout"
        layout="@layout/title_view_with_cancel_button" />
    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/activity_settings_fragment_container"/>
</LinearLayout>